--- a/todolist/public/index.html
+++ b/todolist/public/index.html
@@ -18,6 +18,7 @@
 
     <div id="cardheader"></div>
     
+    <div id="Navdate"></div>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
